fix(avatar): picture alignment

--- a/q2/my-map-app/src/styles/avatar.module.css
+++ b/q2/my-map-app/src/styles/avatar.module.css
@@ -19,4 +19,5 @@
   border-radius: 50%;
   width: 50px;
   height: 50px;
+  vertical-align: middle;
 }
